--- a/make/libs/external.in
+++ b/make/libs/external.in
@@ -55,6 +55,7 @@ source "make/libs/lz4/external.in"
 source "make/xz/external.in.libs"
 source "make/libs/lzo/external.in"
 source "make/libs/libmad/external.in"
+source "make/libs/libmaxminddb/external.in"
 source "make/libs/mbedtls/external.in"
 source "make/libs/libmnl/external.in"
 source "make/libs/mpc/external.in"
