--- a/config/.img/Config.in
+++ b/config/.img/Config.in
@@ -49,6 +49,7 @@ source "config/.img/2170.in"
 source "config/.img/2400--07_1X.in"
 source "config/.img/2400--07_25.in"
 source "config/.img/2400--07_2X.in"
+source "config/.img/2400--07_4X.in"
 source "config/.img/2400.in"
 source "config/.img/3000--07_0X.in"
 source "config/.img/3000--07_1X.in"
