--- a/config/.img/2400--07_2X.in
+++ b/config/.img/2400--07_2X.in
@@ -1,5 +1,14 @@
 if FREETZ_TYPE_2400 && FREETZ_AVM_VERSION_07_2X
 
+config FREETZ_AVM_HAS_NSSWITCH
+	def_bool y
+
+config FREETZ_AVM_PROP_KERNEL_4_4_60
+	def_bool y
+
+config FREETZ_AVM_PROP_KERNEL_CONFIG_AREA_SIZE_0
+	def_bool y
+
 config FREETZ_AVM_PROP_UCLIBC_SEPARATE
 	def_bool y
 
