--- a/config/avm/availability.in
+++ b/config/avm/availability.in
@@ -459,6 +459,7 @@ config FREETZ_AVM_HAS_FIRMWARE_07_4X_LABOR
 #	depends on FREETZ_AVM_HAS_FIRMWARE_07_4X
 	depends on \
 		( (FREETZ_TYPE_LANG_DE||FREETZ_TYPE_LANG_EN) && ( \
+			FREETZ_TYPE_2400 || \
 			FREETZ_TYPE_7590 || \
 			FREETZ_TYPE_7599 \
 		))
