--- a/config/.img/7530--07_4X.in
+++ b/config/.img/7530--07_4X.in
@@ -1,4 +1,4 @@
-if FREETZ_TYPE_7530 && FREETZ_AVM_VERSION_07_2X
+if FREETZ_TYPE_7530 && FREETZ_AVM_VERSION_07_4X
 
 config FREETZ_AVM_PROP_ALL_REGIONS
 	def_bool y
@@ -42,16 +42,19 @@ config FREETZ_AVM_HAS_LANGUAGE_pl
 config FREETZ_AVM_HAS_LEDPAGE
 	def_bool y
 
+config FREETZ_AVM_HAS_KMOD
+	def_bool y
+
 config FREETZ_AVM_HAS_SAMBA_NQCS
+	def_bool y
+
+config FREETZ_AVM_HAS_WIREGUARD
 	def_bool y
 
 config FREETZ_AVM_HAS_UNTRUSTEDD
 	def_bool y
 
-config FREETZ_AVM_HAS_NSSWITCH
-	def_bool y
-
-config FREETZ_AVM_PROP_KERNEL_4_4_60
+config FREETZ_AVM_PROP_KERNEL_4_4_271
 	def_bool y
 
 config FREETZ_AVM_PROP_KERNEL_CONFIG_AREA_SIZE_256
