--- a/config/.img/7530--DE--07_1X.in
+++ b/config/.img/7530--DE--07_1X.in
@@ -15,6 +15,12 @@ config FREETZ_AVM_HAS_LEDPAGE
 config FREETZ_AVM_HAS_SAMBA_SMBD
 	def_bool y
 
+config FREETZ_AVM_HAS_NSSWITCH
+	def_bool y
+
+config FREETZ_AVM_PROP_KERNEL_4_4_60
+	def_bool y
+
 config FREETZ_AVM_PROP_KERNEL_CONFIG_AREA_SIZE_256
 	def_bool y
 
