--- a/config/.img/7530--EN--07_1X.in
+++ b/config/.img/7530--EN--07_1X.in
@@ -30,6 +30,12 @@ config FREETZ_AVM_HAS_LANGUAGE_pl
 config FREETZ_AVM_HAS_SAMBA_SMBD
 	def_bool y
 
+config FREETZ_AVM_HAS_NSSWITCH
+	def_bool y
+
+config FREETZ_AVM_PROP_KERNEL_4_4_60
+	def_bool y
+
 config FREETZ_AVM_PROP_KERNEL_CONFIG_AREA_SIZE_256
 	def_bool y
 
