--- a/config/.img/Config.in
+++ b/config/.img/Config.in
@@ -293,6 +293,7 @@ source "config/.img/7520--DE--07_1X.in"
 source "config/.img/7520.in"
 source "config/.img/7530--07_25.in"
 source "config/.img/7530--07_2X.in"
+source "config/.img/7530--07_4X.in"
 source "config/.img/7530--DE--07_0X.in"
 source "config/.img/7530--DE--07_1X.in"
 source "config/.img/7530--EN--07_0X.in"
