--- a/config/mod/download.in
+++ b/config/mod/download.in
@@ -830,6 +830,7 @@ menu "Download options"
 		default "FRITZ.Box_7530-07.14.image"                                                   if (FREETZ_TYPE_7530 || FREETZ_TYPE_7520_7530) && FREETZ_TYPE_LANG_DE && FREETZ_TYPE_FIRMWARE_07_1X
 		default "FRITZ.Box_7530-07.21.image"                                                   if (FREETZ_TYPE_7530 || FREETZ_TYPE_7520_7530)                        && FREETZ_TYPE_FIRMWARE_07_2X
 		default "FRITZ.Box_7530-07.29.image"                                                   if (FREETZ_TYPE_7530 || FREETZ_TYPE_7520_7530)                        && FREETZ_TYPE_FIRMWARE_07_25
+		default "FRITZ.Box_7530-07.39-94937-Labor.image"                                       if (FREETZ_TYPE_7530 || FREETZ_TYPE_7520_7530)                        && FREETZ_TYPE_FIRMWARE_07_4X_LABOR
 		#
 		default "FRITZ.Box_7530_AX-07.22.image"                                                if FREETZ_TYPE_7539 && FREETZ_TYPE_FIRMWARE_07_2X
 		default "FRITZ.Box_7530_AX-07.29.image"                                                if FREETZ_TYPE_7539 && FREETZ_TYPE_FIRMWARE_07_25
@@ -918,6 +919,7 @@ menu "Download options"
 		depends                                         on FREETZ_TYPE_FIRMWARE_LABOR && !FREETZ_TYPE_FIRMWARE_DETECT_LATEST
 		#
 		default "fritz-repeater-2400-labor-94804.zip"   if FREETZ_TYPE_2400
+		default "fritzbox-7530-labor-94937.zip"         if FREETZ_TYPE_7530
 		default "fritzbox-7590-labor-94022.zip"         if FREETZ_TYPE_7590
 		default "fritzbox-7590_AX-labor-94093.zip"      if FREETZ_TYPE_7599
 #		default "xxxxxxxxxxxxxxxxxxxxxxxxx.zip"         if FREETZ_TYPE_xxxx
