--- a/config/.img/6591--07_4X.in
+++ b/config/.img/6591--07_4X.in
@@ -1,4 +1,4 @@
-if FREETZ_TYPE_6591 && FREETZ_AVM_VERSION_07_25
+if FREETZ_TYPE_6591 && FREETZ_AVM_VERSION_07_4X
 
 config FREETZ_AVM_HAS_MULTIPLE_BRANDINGS
 	def_bool y
@@ -9,13 +9,16 @@ config FREETZ_AVM_HAS_BRANDING_kdg
 config FREETZ_AVM_HAS_BRANDING_lgi
 	def_bool y
 
+config FREETZ_AVM_HAS_KMOD
+	def_bool y
+
 config FREETZ_AVM_HAS_SAMBA_NQCS
 	def_bool y
 
-config FREETZ_AVM_HAS_UNTRUSTEDD
+config FREETZ_AVM_HAS_WIREGUARD
 	def_bool y
 
-config FREETZ_AVM_HAS_NSSWITCH
+config FREETZ_AVM_HAS_UNTRUSTEDD
 	def_bool y
 
 config FREETZ_AVM_PROP_KERNEL_4_9_250
