--- a/config/.img/Config.in
+++ b/config/.img/Config.in
@@ -141,6 +141,7 @@ source "config/.img/6591--07_0X.in"
 source "config/.img/6591--07_1X.in"
 source "config/.img/6591--07_25.in"
 source "config/.img/6591--07_2X.in"
+source "config/.img/6591--07_4X.in"
 source "config/.img/6591.in"
 source "config/.img/6660--07_1X.in"
 source "config/.img/6660--07_25.in"
