--- a/config/avm/availability.in
+++ b/config/avm/availability.in
@@ -460,6 +460,7 @@ config FREETZ_AVM_HAS_FIRMWARE_07_4X_LABOR
 	depends on \
 		( (FREETZ_TYPE_LANG_DE||FREETZ_TYPE_LANG_EN) && ( \
 			FREETZ_TYPE_2400 || \
+			FREETZ_TYPE_6591 || \
 			FREETZ_TYPE_7530 || \
 			FREETZ_TYPE_7590 || \
 			FREETZ_TYPE_7599 \
