--- a/config/mod/download.in
+++ b/config/mod/download.in
@@ -657,6 +657,7 @@ menu "Download options"
 		default "FRITZ.Box_6591_Cable-07.13.image"                                             if FREETZ_TYPE_6591 && FREETZ_TYPE_FIRMWARE_07_1X
 		default "FRITZ.Box_6591_Cable-07.22.image"                                             if FREETZ_TYPE_6591 && FREETZ_TYPE_FIRMWARE_07_2X
 		default "FRITZ.Box_6591_Cable-07.29.image"                                             if FREETZ_TYPE_6591 && FREETZ_TYPE_FIRMWARE_07_25
+		default "FRITZ.Box_6591_Cable-07.39-94697-Labor.image"                                 if FREETZ_TYPE_6591 && FREETZ_TYPE_FIRMWARE_07_4X_LABOR
 		#
 		default "FRITZ.Box_6660_Cable-07.15.image"                                             if FREETZ_TYPE_6660 && FREETZ_TYPE_FIRMWARE_07_1X
 		default "FRITZ.Box_6660_Cable-07.24.image"                                             if FREETZ_TYPE_6660 && FREETZ_TYPE_FIRMWARE_07_2X
@@ -920,6 +921,7 @@ menu "Download options"
 		#
 		default "fritz-repeater-2400-labor-94804.zip"   if FREETZ_TYPE_2400
 		default "fritzbox-7530-labor-94937.zip"         if FREETZ_TYPE_7530
+		default "fritzbox-6591-labor-94697.zip"         if FREETZ_TYPE_6591
 		default "fritzbox-7590-labor-94022.zip"         if FREETZ_TYPE_7590
 		default "fritzbox-7590_AX-labor-94093.zip"      if FREETZ_TYPE_7599
 #		default "xxxxxxxxxxxxxxxxxxxxxxxxx.zip"         if FREETZ_TYPE_xxxx
