--- a/config/avm/kernel.in
+++ b/config/avm/kernel.in
@@ -131,11 +131,17 @@ config FREETZ_KERNEL_VERSION_4_4_60
 	default y
 	depends on FREETZ_AVM_PROP_KERNEL_4_4_60
 
+config FREETZ_KERNEL_VERSION_4_4_271
+	bool
+	default y
+	depends on FREETZ_AVM_PROP_KERNEL_4_4_271
+
 config FREETZ_KERNEL_VERSION_4_4
 	bool
 	default y
 	depends on \
-		FREETZ_KERNEL_VERSION_4_4_60
+		FREETZ_KERNEL_VERSION_4_4_60 || \
+		FREETZ_KERNEL_VERSION_4_4_271
 
 config FREETZ_KERNEL_VERSION_4_9_161
 	bool
@@ -210,6 +216,7 @@ config FREETZ_KERNEL_VERSION
 	default "4.1.38"    if FREETZ_KERNEL_VERSION_4_1_38
 	default "4.1.52"    if FREETZ_KERNEL_VERSION_4_1_52
 	default "4.4.60"    if FREETZ_KERNEL_VERSION_4_4_60
+	default "4.4.271"   if FREETZ_KERNEL_VERSION_4_4_271
 	default "4.9.161"   if FREETZ_KERNEL_VERSION_4_9_161
 	default "4.9.175"   if FREETZ_KERNEL_VERSION_4_9_175
 	default "4.9.198"   if FREETZ_KERNEL_VERSION_4_9_198
