1200ax tested by @ freetz-ng-mod
 - refs https://github.com/Freetz-NG/freetz-ng/discussions/490

--- a/config/ui/firmware.in
+++ b/config/ui/firmware.in
@@ -552,7 +552,7 @@ choice
 	config FREETZ_TYPE_1209
 		depends on FREETZ_SERIES_ALL || FREETZ_SERIES_EXT
 		select FREETZ_AVM_SOURCE_FOR_SYSTEM_TYPE_QCAARMv8
-		bool "1200 AX - UNTESTED"
+		bool "1200 AX"
 
 	config FREETZ_TYPE_1750
 		depends on FREETZ_SERIES_ALL || FREETZ_SERIES_EXT
@@ -829,7 +829,6 @@ config FREETZ_TYPE_FIRMWARE_UNTESTED
 	default y
 	depends on \
 		FREETZ_TYPE_0300 || \
-		FREETZ_TYPE_1209 || \
 		FREETZ_TYPE_1240 || \
 		FREETZ_TYPE_1260_V2 || \
 		FREETZ_TYPE_2400 || \
