--- a/make/tinyproxy/Config.in
+++ b/make/tinyproxy/Config.in
@@ -3,34 +3,29 @@ config FREETZ_PACKAGE_TINYPROXY
 	default n
 	help
 		Tinyproxy is a lightweight HTTP and HTTPS proxy.
-		http://tinyproxy.sourceforge.net
 
-config FREETZ_PACKAGE_TINYPROXY_WITH_TRANSPARENT_PROXY
-	bool "Enable transparent proxying"
-	depends on FREETZ_PACKAGE_TINYPROXY
-	default y
+if FREETZ_PACKAGE_TINYPROXY
 
-config FREETZ_PACKAGE_TINYPROXY_WITH_FILTER
-	bool "Enable filtering support"
-	depends on FREETZ_PACKAGE_TINYPROXY
-	default y
+	config FREETZ_PACKAGE_TINYPROXY_WITH_TRANSPARENT_PROXY
+		bool "Enable transparent proxying"
+		depends on FREETZ_AVM_VERSION_04_XX_MAX
+		default n
 
-config FREETZ_PACKAGE_TINYPROXY_WITH_UPSTREAM
-	bool "Enable upstream support"
-	depends on FREETZ_PACKAGE_TINYPROXY
-	default n
+	config FREETZ_PACKAGE_TINYPROXY_WITH_FILTER
+		bool "Enable filtering support"
+		default y
 
-#config FREETZ_PACKAGE_TINYPROXY_WITH_SOCKS
-#	bool "Enable SOCKS support"
-#	depends on FREETZ_PACKAGE_TINYPROXY
-#	default n
+	config FREETZ_PACKAGE_TINYPROXY_WITH_UPSTREAM
+		bool "Enable upstream support"
+		default n
 
-config FREETZ_PACKAGE_TINYPROXY_WITH_REVERSE
-	bool "Enable reverse proxy support"
-	depends on FREETZ_PACKAGE_TINYPROXY
-	default n
+	config FREETZ_PACKAGE_TINYPROXY_WITH_REVERSE
+		bool "Enable reverse proxy support"
+		default n
 
-config FREETZ_PACKAGE_TINYPROXY_STATIC
-	bool "Link statically"
-	depends on FREETZ_PACKAGE_TINYPROXY
-	default n
+	config FREETZ_PACKAGE_TINYPROXY_STATIC
+		bool "Link statically"
+		default n
+
+endif # FREETZ_PACKAGE_TINYPROXY
+
