--- a/make/tinyproxy/files/root/etc/default.tinyproxy/tinyproxy.cfg
+++ b/make/tinyproxy/files/root/etc/default.tinyproxy/tinyproxy.cfg
@@ -18,6 +18,7 @@ export TINYPROXY_FILTERCASESENSITIVE='no'
 export TINYPROXY_FILTERDEFAULTDENY='no'
 export TINYPROXY_FILTEREXTENDED='no'
 export TINYPROXY_FILTERURLS='no'
+export TINYPROXY_HOSTNAME='fritz.box'
 export TINYPROXY_LISTEN='0.0.0.0'
 export TINYPROXY_LOGFILE='/var/tmp/tinyproxy.log'
 export TINYPROXY_LOGLEVEL='Warning'
