4060 testes by bbszx
 - refs https://www.digital-eliteboard.com/threads/509934/#post-4012707

--- a/config/ui/firmware.in
+++ b/config/ui/firmware.in
@@ -158,7 +158,7 @@ choice
 	config FREETZ_TYPE_4060
 		depends on FREETZ_SERIES_ALL || FREETZ_SERIES_4N5
 		select FREETZ_AVM_SOURCE_FOR_SYSTEM_TYPE_QCAARMv8
-		bool "4060 - UNTESTED"
+		bool "4060"
 
 	comment "Fon"
 		depends on FREETZ_SERIES_ALL || FREETZ_SERIES_0N1
@@ -832,7 +832,6 @@ config FREETZ_TYPE_FIRMWARE_UNTESTED
 		FREETZ_TYPE_1240 || \
 		FREETZ_TYPE_1260_V2 || \
 		FREETZ_TYPE_2400 || \
-		FREETZ_TYPE_4060 || \
 		FREETZ_TYPE_5530 || \
 		FREETZ_TYPE_5590 || \
 		FREETZ_TYPE_6810 || \
