--- a/config/avm/availability.in
+++ b/config/avm/availability.in
@@ -390,7 +390,8 @@ config FREETZ_AVM_HAS_FIRMWARE_07_25_INHAUS
 	default y
 	depends on \
 		( (FREETZ_TYPE_LANG_DE||FREETZ_TYPE_LANG_EN) && ( \
-			FREETZ_TYPE_5590 \
+			FREETZ_TYPE_5590 || \
+			FREETZ_TYPE_6690 \
 		))
 
 config FREETZ_AVM_HAS_FIRMWARE_07_25
@@ -517,6 +518,7 @@ config FREETZ_AVM_HAS_LANG_DE
 		FREETZ_TYPE_6590 || \
 		FREETZ_TYPE_6591 || \
 		FREETZ_TYPE_6660 || \
+		FREETZ_TYPE_6690 || \
 		FREETZ_TYPE_6810 || \
 		FREETZ_TYPE_6820_V1 || \
 		FREETZ_TYPE_6820_V3 || \
