--- a/config/mod/prefix.in
+++ b/config/mod/prefix.in
@@ -49,6 +49,7 @@ config FREETZ_TYPE_PREFIX
 	default "6590"              if FREETZ_TYPE_6590
 	default "6591"              if FREETZ_TYPE_6591
 	default "6660"              if FREETZ_TYPE_6660
+	default "6690"              if FREETZ_TYPE_6690
 	default "6810"              if FREETZ_TYPE_6810
 	default "6820_v1"           if FREETZ_TYPE_6820_V1
 	default "6820_v2"           if FREETZ_TYPE_6820_V2
