--- a/config/.img/Config.in
+++ b/config/.img/Config.in
@@ -147,6 +147,7 @@ source "config/.img/6660--07_1X.in"
 source "config/.img/6660--07_25.in"
 source "config/.img/6660--07_2X.in"
 source "config/.img/6660.in"
+source "config/.img/6690.in"
 source "config/.img/6810--DE--06_2X.in"
 source "config/.img/6810--EN--06_2X.in"
 source "config/.img/6810.in"
