--- a/config/avm/features.in
+++ b/config/avm/features.in
@@ -10,7 +10,8 @@ config FREETZ_TYPE_CABLE
 		FREETZ_TYPE_6490 || \
 		FREETZ_TYPE_6590 || \
 		FREETZ_TYPE_6591 || \
-		FREETZ_TYPE_6660
+		FREETZ_TYPE_6660 || \
+		FREETZ_TYPE_6690
 
 config FREETZ_TYPE_DSL
 	bool
