--- a/config/avm/hardware.in
+++ b/config/avm/hardware.in
@@ -144,7 +144,8 @@ config FREETZ_SYSTEM_TYPE_PUMA7_X86
 	default y
 	depends on \
 		FREETZ_TYPE_6591 || \
-		FREETZ_TYPE_6660
+		FREETZ_TYPE_6660 || \
+		FREETZ_TYPE_6690
 
 config FREETZ_SYSTEM_TYPE_PUMA7
 	bool
