--- a/config/mod/download.in
+++ b/config/mod/download.in
@@ -366,6 +366,8 @@ menu "Download options"
 		default "@AVM/firmware/6660/4424247314"                                                                            if FREETZ_TYPE_6660 && FREETZ_TYPE_FIRMWARE_07_2X
 		default "@AVM/fritzbox-6660-cable/{deutschland,other}/fritz.os"                                                    if FREETZ_TYPE_6660
 		#
+		default "@AVM/fritzbox-6690-cable/{deutschland,other}/fritz.os"                                                    if FREETZ_TYPE_6690
+		#
 		default "@AVM/{fritzbox-6810-lte/deutschland/fritz.os,fritzbox_6810_lte/firmware/deutsch}"                         if FREETZ_TYPE_6810 && FREETZ_TYPE_LANG_DE
 		default "@AVM/{fritzbox-6810-lte/other/fritz.os,fritzbox_6810_lte/firmware/english}"                               if FREETZ_TYPE_6810 && FREETZ_TYPE_LANG_EN
 		#
@@ -661,6 +663,8 @@ menu "Download options"
 		default "FRITZ.Box_6660_Cable-07.15.image"                                             if FREETZ_TYPE_6660 && FREETZ_TYPE_FIRMWARE_07_1X
 		default "FRITZ.Box_6660_Cable-07.24.image"                                             if FREETZ_TYPE_6660 && FREETZ_TYPE_FIRMWARE_07_2X
 		default "FRITZ.Box_6660_Cable-07.29.image"                                             if FREETZ_TYPE_6660 && FREETZ_TYPE_FIRMWARE_07_25
+		#
+		default "FRITZ.Box_6690_Cable-07.28-91892-Inhaus.image"                                if FREETZ_TYPE_6690 && FREETZ_TYPE_FIRMWARE_07_25_INHAUS
 		#
 		default "FRITZ.Box_6810_LTE.108.06.34.image"                                           if FREETZ_TYPE_6810 && FREETZ_TYPE_LANG_DE && FREETZ_TYPE_FIRMWARE_06_2X
 		default "FRITZ.Box_6810_LTE.en-de-es-it-fr.108.06.34.image"                            if FREETZ_TYPE_6810 && FREETZ_TYPE_LANG_EN && FREETZ_TYPE_FIRMWARE_06_2X
