--- a/config/ui/firmware.in
+++ b/config/ui/firmware.in
@@ -240,6 +240,11 @@ choice
 		select FREETZ_AVM_SOURCE_FOR_SYSTEM_TYPE_PUMA7
 		bool "6660 (atom core)"
 
+	config FREETZ_TYPE_6690
+		depends on FREETZ_SERIES_ALL || FREETZ_SERIES_4N5
+		select FREETZ_AVM_SOURCE_FOR_SYSTEM_TYPE_PUMA7
+		bool "6690 (atom core) - UNTESTED"
+
 	comment "LTE"
 		depends on FREETZ_SERIES_ALL || FREETZ_SERIES_2N3 || FREETZ_SERIES_4N5
 
