--- a/.github/workflows/hosttools.yml
+++ b/.github/workflows/hosttools.yml
@@ -41,6 +41,9 @@ jobs:
         path: .freetz-dl
         key: ${{ runner.os }}-downloads
 
+    # Ubuntu 14.04 comes with make version 3.81, Makefile checks for at least version 3.82
+    - name: Remove make version check from Makefile
+      run: sed -i '/MAKE_VERSION/d' Makefile
     - name: Build hosttools
       run: |
         # for demo
