--- a/.github/workflows/hosttools.yml
+++ b/.github/workflows/hosttools.yml
@@ -43,7 +43,7 @@ jobs:
 
     # Ubuntu 14.04 comes with make version 3.81, Makefile checks for at least version 3.82
     - name: Remove make version check from Makefile
-      run: sed -i '/MAKE_VERSION/d' Makefile
+      run: sed -ie '/MAKE_VERSION/,+2d' Makefile
     - name: Build hosttools
       run: |
         # for demo
