--- a/.github/workflows/hosttools.yml
+++ b/.github/workflows/hosttools.yml
@@ -44,11 +44,13 @@ jobs:
     # Ubuntu 14.04 comes with make version 3.81, Makefile checks for at least version 3.82
     - name: Remove make version check from Makefile
       run: sed -ie '/MAKE_VERSION/,+2d' Makefile
+    - name: Create freetz-builduser
+      run: useradd freetz-builduser && chown -R freetz-builduser .
     - name: Build hosttools
       run: |
         # for demo
         # date >foo.txt && mkdir bar ; date >bar/bar.txt 
-        tools/dl-hosttools
+        su freetz-builduser -c tools/dl-hosttools
 
     - name: Get current date
       id: date
