setting umask before checkout

--- a/.github/workflows/toolchain.yml
+++ b/.github/workflows/toolchain.yml
@@ -33,7 +33,8 @@ jobs:
                    libusb-dev unzip intltool libacl1-dev libcap-dev libc6-dev-i386 \
                    lib32ncurses5-dev gcc-multilib lib32stdc++6 libglib2.0-dev \
                    libxml2-dev cpio
-    steps:
+    - name: Set umask before checkout
+      run: umask 0022
     - uses: actions/checkout@v2
     - name: Cache downloads
       id: cache-downloads
