--- a/.github/workflows/hosttools.yml
+++ b/.github/workflows/hosttools.yml
@@ -34,7 +34,7 @@ jobs:
                    lib32ncurses5-dev gcc-multilib lib32stdc++6 libglib2.0-dev \
                    libxml2-dev cpio
     - name: Set umask before checkout
-      run: umask 0022
+      run: echo "umask 0022" >>/etc/profile
     - uses: actions/checkout@v2
     - name: Cache downloads
       id: cache-downloads
