--- a/.github/workflows/toolchain.yml
+++ b/.github/workflows/toolchain.yml
@@ -18,6 +18,7 @@ jobs:
     steps:
     - name: Install prerequisites
       run: |
+        echo "umask 0022" >>/etc/profile && \
         apt-get -y update && \
         apt-get -y upgrade && \
         apt-get -y dist-upgrade && \
@@ -33,8 +34,6 @@ jobs:
                    libusb-dev unzip intltool libacl1-dev libcap-dev libc6-dev-i386 \
                    lib32ncurses5-dev gcc-multilib lib32stdc++6 libglib2.0-dev \
                    libxml2-dev cpio
-    - name: Set umask before checkout
-      run: echo "umask 0022" >>/etc/bash.bashrc
     - uses: actions/checkout@v2
     - name: Cache downloads
       id: cache-downloads
