--- a/make/libs/external.in
+++ b/make/libs/external.in
@@ -107,4 +107,5 @@ source "make/libs/libvorbis/external.in"
 source "make/libs/libxml2/external.in"
 source "make/xsltproc/external.in.libs"
 source "make/libs/zlib/external.in"
+source "make/libs/libsodium/external.in"
 
