support for externalizing the csv

--- a/make/dnscrypt-proxy/external.in
+++ b/make/dnscrypt-proxy/external.in
@@ -5,3 +5,11 @@ config EXTERNAL_FREETZ_PACKAGE_DNSCRYPT_PROXY
 	help
 		externals the following file(s):
 		 /usr/bin/dnscrypt-proxy
+
+config EXTERNAL_FREETZ_PACKAGE_DNSCRYPT_PROXY_CSV
+	depends on EXTERNAL_FREETZ_PACKAGE_DNSCRYPT_PROXY
+	bool "csv resolver file"
+	default n
+	help
+		externals the following file(s):
+                 /usr/share/dnscrypt-proxy/dnscrypt-resolvers.csv
