--- a/make/dnscrypt-proxy/files/root/etc/default.dnscrypt-proxy/dnscrypt-proxy.cfg
+++ b/make/dnscrypt-proxy/files/root/etc/default.dnscrypt-proxy/dnscrypt-proxy.cfg
@@ -1,3 +1,5 @@
 export DNSCRYPT_PROXY_ENABLED='no'
 export DNSCRYPT_PROXY_BINDADDRESS='127.0.0.1:53'
 export DNSCRYPT_PROXY_MAXCLIENTS=250
+export DNSCRYPT_LOG_SYSLOG='no'
+
